moving the mobile puzzle game a bit

--- a/gk/games.html
+++ b/gk/games.html
@@ -68,7 +68,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u1613-bw">
      <div id="u1613"><!-- custom html -->
       <div id="cubpupcontainer">
-<iframe id="cubpupiframe" src="./cubpup/index.html" width="80%" height="620"></iframe>
+<iframe id="cubpupiframe" src="https://lanceencarnado.github.io/gk/cubpup/" width="80%" height="620"></iframe>
 </div>
      </div>
     </div>
@@ -80,7 +80,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u1685-bw">
      <div id="u1685"><!-- custom html -->
       <div id="puzzlecontainer">
-<iframe id="puzzleiframe" src="./puzzle_responsive/index.html" width="80%" height="700"></iframe>
+<iframe id="puzzleiframe" src="https://lanceencarnado.github.io/gk/puzzle_responsive/" width="80%" height="700"></iframe>
 </div>
      </div>
     </div>
