--- a/gk/phone/games.html
+++ b/gk/phone/games.html
@@ -18,9 +18,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Games</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/games.css?crc=4000386329" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/games.css?crc=374121639" id="pagesheet"/>
     <!--custom head HTML-->
-  <style>#cubpupcontainer {  margin: auto;  text-align: center;}</style><style>#puzzlecontainer {  margin: auto;  text-align: center;}</style>
+  <style>#cubpupcontainer {  margin: auto;  text-align: center;}#puzzlecontainer {  margin: auto;  text-align: center;}</style>
   <!--/*
 
 */
@@ -63,7 +63,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u1665-bw">
      <div id="u1665"><!-- custom html -->
       <div id="cubpupcontainer">
-<iframe id="cubpupiframe" src="../cubpup/index.html" width="90%" height="500"></iframe>
+<iframe id="cubpupiframe" src="https://lanceencarnado.github.io/gk/cubpup/" width="90%" height="500"></iframe>
 </div>
      </div>
     </div>
@@ -72,12 +72,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <p><span id="u1714">Puzzle</span></p>
     </div>
     <!-- /m_editable -->
-    <div class="browser_width colelem" id="u1693-bw">
-     <div id="u1693"><!-- custom html -->
-      <div id="puzzlecontainer">
-<iframe id="puzzleiframe" src="../puzzle_mobile/index.html" width="95%" height="300"></iframe>
+    <div class="colelem" id="u1693"><!-- custom html -->
+     <div id="puzzlecontainer">
+<iframe id="puzzleiframe" src="https://lanceencarnado.github.io/gk/puzzle_mobile/" width="300" height="300"></iframe>
 </div>
-     </div>
     </div>
     <!-- m_editable region-id="editable-static-tag-U1645-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
     <div class="clearfix colelem" id="u1645-4" data-muse-uid="U1645" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
@@ -86,7 +84,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
     <div class="museBGSize colelem" id="u1655"><!-- content --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="1330" data-content-above-spacer="1330" data-content-below-spacer="0"></div>
+   <div class="verticalspacer" data-offset-top="1346" data-content-above-spacer="1346" data-content-below-spacer="0"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
