gods kid - actually done v1 of the games page (web and mobile)

--- a/gk/about-us.html
+++ b/gk/about-us.html
@@ -22,7 +22,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About Us</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=4009855840" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=169349590" id="pagesheet"/>
     <!--/*
 
 */
@@ -50,10 +50,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- m_editable region-id="editable-static-tag-U1284-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
     <a class="nonblock nontext MuseLinkActive clearfix" id="u1284-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U1284" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U1277-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix" id="u1277-4" data-muse-uid="U1277" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>Games</p>
-    </div>
+    <!-- m_editable region-id="editable-static-tag-U1277-BP_infinity" template="about-us.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix" id="u1277-4" href="games.html" data-href="page:U1608" data-muse-uid="U1277" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
     <!-- /m_editable -->
     <div class="ose_pre_init" id="u1283"><!-- content --></div>
    </div>
@@ -94,7 +92,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u1283').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"opacity":0,"in":[0,0]},{"in":[0,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
+$('#u1283').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"in":[0,0],"opacity":0},{"in":[0,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
