--- a/gk/index.html
+++ b/gk/index.html
@@ -22,7 +22,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4232231100" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=516789985" id="pagesheet"/>
     <!--/*
 
 */
@@ -48,10 +48,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- m_editable region-id="editable-static-tag-U101-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
     <a class="nonblock nontext clearfix" id="u101-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U101" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U314-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix" id="u314-4" data-muse-uid="U314" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>Games</p>
-    </div>
+    <!-- m_editable region-id="editable-static-tag-U314-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix" id="u314-4" href="games.html" data-href="page:U1608" data-muse-uid="U314" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
     <!-- /m_editable -->
     <div class="ose_pre_init" id="u1199"><!-- content --></div>
    </div>
@@ -341,7 +339,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u1199').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"opacity":0,"in":[0,0]},{"in":[0,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
+$('#u1199').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"in":[0,0],"opacity":0},{"in":[0,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
