--- a/gk/phone/gallery.html
+++ b/gk/phone/gallery.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Gallery</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=4211197705" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=46749072" id="pagesheet"/>
     <!--/*
 
 */
@@ -47,10 +47,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- m_editable region-id="editable-static-tag-U1531-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u1531-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U1531" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U1532-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u1532-4" data-muse-uid="U1532" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>Games</p>
-     </div>
+     <!-- m_editable region-id="editable-static-tag-U1532-BP_infinity" template="phone/gallery.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u1532-4" href="games.html" data-href="page:U1660" data-muse-uid="U1532" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
      <!-- /m_editable -->
     </div>
     <div class="colelem" id="u1114"><!-- content --></div>
@@ -86,8 +84,8 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u1534').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u1534').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"opacity":0,"in":[0,0]},{"in":[0,Infinity],"fade":25,"opacity":100}]);/* scroll effect */
+$('#u1534').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u1534').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"in":[0,0],"opacity":0},{"in":[0,Infinity],"fade":25,"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
