--- a/gk/phone/games.html
+++ b/gk/phone/games.html
@@ -18,9 +18,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Games</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/games.css?crc=374121639" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/games.css?crc=431025171" id="pagesheet"/>
     <!--custom head HTML-->
-  <style>#cubpupcontainer {  margin: auto;  text-align: center;}#puzzlecontainer {  margin: auto;  text-align: center;}</style>
+  <style>iframe {  border: none;}#cubpupcontainer {  margin: auto;  text-align: center;}#puzzlecontainer {  margin: auto;  text-align: center;}#puzzleiframe {  overflow: hidden;}</style>
   <!--/*
 
 */
@@ -49,15 +49,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- m_editable region-id="editable-static-tag-U1657-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u1657-4" href="about-us.html" data-href="page:U1264" data-muse-uid="U1657" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
      <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U1652-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u1652-4" data-muse-uid="U1652" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>Games</p>
-     </div>
+     <!-- m_editable region-id="editable-static-tag-U1652-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u1652-4" href="games.html" data-href="page:U1660" data-muse-uid="U1652" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
      <!-- /m_editable -->
     </div>
     <!-- m_editable region-id="editable-static-tag-U1711-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
     <div class="clearfix colelem" id="u1711-4" data-muse-uid="U1711" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p><span id="u1711">Cub and Pup</span></p>
+     <p>Cub and Pup</p>
     </div>
     <!-- /m_editable -->
     <div class="browser_width colelem" id="u1665-bw">
@@ -69,13 +67,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <!-- m_editable region-id="editable-static-tag-U1714-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
     <div class="clearfix colelem" id="u1714-4" data-muse-uid="U1714" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p><span id="u1714">Puzzle</span></p>
+     <p>Puzzle</p>
     </div>
     <!-- /m_editable -->
-    <div class="colelem" id="u1693"><!-- custom html -->
-     <div id="puzzlecontainer">
-<iframe id="puzzleiframe" src="https://lanceencarnado.github.io/gk/puzzle_mobile/" width="300" height="300"></iframe>
+    <div class="browser_width colelem" id="u1693-bw">
+     <div id="u1693"><!-- custom html -->
+      <div id="puzzlecontainer">
+<iframe id="puzzleiframe" src="https://lanceencarnado.github.io/gk/puzzle_mobile/" width="365" height="300" scrolling="no"></iframe>
 </div>
+     </div>
     </div>
     <!-- m_editable region-id="editable-static-tag-U1645-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
     <div class="clearfix colelem" id="u1645-4" data-muse-uid="U1645" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
@@ -84,7 +84,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
     <div class="museBGSize colelem" id="u1655"><!-- content --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="1346" data-content-above-spacer="1346" data-content-below-spacer="0"></div>
+   <div class="verticalspacer" data-offset-top="1287" data-content-above-spacer="1286" data-content-below-spacer="0"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
