--- a/gk/games.html
+++ b/gk/games.html
@@ -18,11 +18,11 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "games.css"], "outOfDate":[]};
 </script>
   
-  <link media="only screen and (max-width: 370px)" rel="alternate" href="https://tackleboxing.000webhostapp.com/phone/games.html"/>
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="https://lanceencarnado.github.io/gk/phone/games.html"/>
   <title>Games</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/games.css?crc=3854927137" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/games.css?crc=3934081774" id="pagesheet"/>
     <!--custom head HTML-->
   <style>#cubpupcontainer {  margin: auto;  text-align: center;  min-width: 400px;}#puzzlecontainer {  margin: auto;  text-align: center;  min-width: 400px;}iframe {  border: none;  overflow: hidden;}</style>
   <!--/*
@@ -52,10 +52,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- m_editable region-id="editable-static-tag-U1605-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
     <a class="nonblock nontext clearfix" id="u1605-4" href="about-us.html" data-href="page:U1310" data-muse-uid="U1605" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U1600-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix" id="u1600-4" data-muse-uid="U1600" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>Games</p>
-    </div>
+    <!-- m_editable region-id="editable-static-tag-U1600-BP_infinity" template="games.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext MuseLinkActive clearfix" id="u1600-4" href="games.html" data-href="page:U1608" data-muse-uid="U1600" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
     <!-- /m_editable -->
     <div class="ose_pre_init" id="u1602"><!-- content --></div>
    </div>
@@ -90,7 +88,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U1603-BP_infinity" template="games.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clip_frame colelem" id="u1603" href="http://www.tacklebox.company" data-muse-uid="U1603"><!-- svg --><img class="svg" id="u1604" src="images/tacklebox-black-01.svg?crc=507190392" width="215" height="62" alt="" data-mu-svgfallback="images/tacklebox%20black-01_poster_.png?crc=419504502"/></a>
+    <a class="nonblock nontext clip_frame colelem" id="u1603" href="http://www.tacklebox.company" data-muse-uid="U1603"><!-- svg --><img class="svg" id="u1604" src="images/tacklebox-black-01.svg?crc=507190392" width="215" height="62" alt="" data-mu-svgfallback="images/tacklebox%20black-01_poster_.png?crc=400686630"/></a>
     <!-- /m_editable -->
    </div>
    <div class="verticalspacer" data-offset-top="2003" data-content-above-spacer="2003" data-content-below-spacer="40"></div>
@@ -114,7 +112,7 @@ Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u1602').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":0},{"opacity":0,"in":[0,0]},{"fade":50,"in":[0,Infinity],"opacity":100}]);/* scroll effect */
+$('#u1602').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"in":[0,0],"opacity":0},{"in":[0,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
