--- a/gk/phone/games.html
+++ b/gk/phone/games.html
@@ -61,7 +61,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u1665-bw">
      <div id="u1665"><!-- custom html -->
       <div id="cubpupcontainer">
-<iframe id="cubpupiframe" src="https://lanceencarnado.github.io/gk/cubpup/" width="90%" height="500"></iframe>
+<iframe id="cubpupiframe" src="../cubpup/index.html" width="90%" height="500"></iframe>
 </div>
      </div>
     </div>
@@ -73,7 +73,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u1693-bw">
      <div id="u1693"><!-- custom html -->
       <div id="puzzlecontainer">
-<iframe id="puzzleiframe" src="https://lanceencarnado.github.io/gk/puzzle_mobile/" width="365" height="300" scrolling="no"></iframe>
+<iframe id="puzzleiframe" src="../puzzle_mobile/index.html" width="365" height="300" scrolling="no"></iframe>
 </div>
      </div>
     </div>
