changed cup and pup assets - cherub maze done basically

--- a/gk/cubpup/index.html
+++ b/gk/cubpup/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Cub n Pup - puzzle game demo</title>
+  <title>Cherub Maze</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -22,7 +22,7 @@
 
 <pre id="intro-fixed1" data-blurb="Tutorial">
 blurb: Tutorial
-instruction: Drag cub to star
+instruction: Drag cherub to star
 ---
 *=.=.
     !
@@ -33,7 +33,7 @@ instruction: Drag cub to star
 
 <pre id="intro-fixed2" data-blurb="Tutorial">
 blurb: Tutorial
-instruction: Drag grid to rotate. Cub and star moves with grid. Orange links stay in place.
+instruction: Drag grid to rotate. Cherub and star moves with grid. Gray links stay in place.
 ---
 * . .
     !
@@ -54,7 +54,7 @@ blurb: ★
 
 <pre id="intro-free1" data-blurb="Tutorial">
 blurb: Tutorial
-instruction: Blue links move with grid. Rotate grid to connect blue and orange links in different ways.
+instruction: Blue links move with grid. Rotate grid to connect blue and gray links in different ways.
 ---
 @-. .
 !   |
