--- a/gk/puzzle_responsive/index.html
+++ b/gk/puzzle_responsive/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - &quot;Responsive&quot; resizing using scale transform</title>
+  <title>Responsive Puzzle</title>
   <link rel="stylesheet" href="./style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
