--- a/gk/puzzle_responsive/game/index.html
+++ b/gk/puzzle_responsive/game/index.html
@@ -14,10 +14,8 @@
 		<div class="me full"></div>
 	</div>
 	<div class="pre_img">
-		<li data-bid="0"><img src="https://preview.ibb.co/kMdsfm/kfp.png"></li>
-		<li data-bid="1"><img src="https://preview.ibb.co/kWOEt6/minion.png"></li>
-		<li data-bid="2"><img src="https://preview.ibb.co/e0Rv0m/ab.jpg"></li>
-		<li data-bid="3" id="upfile1"><img src="https://image.ibb.co/cXSomR/upload1.png" /></li>
+		<li data-bid="0"><img src="godskidpuzzle.jpg"></li>
+		<li data-bid="1" id="upfile1"><img src="upload1.png" /></li>
 		<input type="file" name="image" id="file1" style="display: none">
 	</div>
 	<div align="center"><a href="#" class="button reset" align="center">Reset</a></div>
@@ -26,7 +24,7 @@
 <div class="cover" >
 	<div class="score">
 		<p id="scr_head"> Puzzle Solved! </p>
-		<p id="scr_time"> Time: <span id="min">00</span> Min <span id="sec">00</span> Sec</p>
+		<p id="scr_time"> Time: <span id="min">00</span> mins <span id="sec">00</span> secs</p>
 		<p id="scr_moves"> Moves: <span id="moves"></span></p>
 		<p id="c_code"></p>
 		<div class="button OK">OK</div>
